# algo2_2026

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: sample.txt
results/: benchmark_results.csv
sprawozdanie/: benchmark_table.tex  plot_results.py
src/: AdjList.cpp  AdjList.h  AdjMatrix.cpp  AdjMatrix.h  BellmanFord.cpp  BellmanFord.h  Benchmark.cpp  Benchmark.h  Dijkstra.cpp  Dijkstra.h  FileIO.cpp  FileIO.h  Graph.h  GraphGenerator.cpp  GraphGenerator.h  ShortestPathResult.h  main.cpp
